--- a/vercel.json
+++ b/vercel.json
@@ -6,7 +6,7 @@
     },
     {
       "src": "/npm/(.*)",
-      "dest": "https://cdn.jsdelivr.net/npm/$1"
+      "dest": "https://npmjs.com/$1"
     },
     {
       "src": "/wp/(.*)",
@@ -19,6 +19,14 @@
     {
       "src": "/avatar/(.*)",
       "dest": "https://cn.gravatar.com/$1"
+    },
+    {
+      "src": "/cdnjs/(.*)",
+      "dest": "https://cdnjs.cloudflare.com/$1"
+    },
+    {
+      "src": "/esm/(.*)",
+      "dest": "https://esm.run/$1"
     }
   ]
 }
